# openrouter-usage

./: AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
docs/: CURSOR_PLAN.md  SRS.md
openrouter_usage/: __init__.py  __main__.py  app.py  client.py  domain.py  main.py  version.py
tests/: conftest.py  test_app.py  test_app_focus.py  test_client.py  test_domain.py  test_entrypoint_smoke.py  test_version.py
