[project]
name = "openrouter-usage"
version = "0.1.6"
description = "TUI for OpenRouter management API usage (activity, keys, credits)"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "textual>=0.86",
]

[project.scripts]
openrouter-usage = "openrouter_usage.main:main"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/codeprimate/openrouter-usage"
Repository = "https://github.com/codeprimate/openrouter-usage"
Issues = "https://github.com/codeprimate/openrouter-usage/issues"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openrouter_usage"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["openrouter_usage", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
